--- a/Atividade_API/index.html
+++ b/Atividade_API/index.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="PT-BR">
 	<head>
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link rel="stylesheet" href="assets/css/styles.css" />
+		<link rel="stylesheet" href="./style.css" />
 		<title>Just... cats!</title>
 	</head>
 	<body>
 		<main>
 			<h1>Just... cats!</h1>
-			<img id="cat" /><br />
+			<img id="cat"/><br />
 			<button id="change-cat">Change cat</button>
 		</main>
-		<script src="assets/js/scripts.js"></script>
+		<script src="./script.js"></script>
 	</body>
 </html>
