--- a/Atividade_API/index.html
+++ b/Atividade_API/index.html
@@ -5,12 +5,13 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="stylesheet" href="./style.css" />
+        
 		<title>Just... cats!</title>
 	</head>
 	<body>
 		<main>
 			<h1>Just... cats!</h1>
-			<img id="cat"/><br />
+			<img id="cat"></img><br />
 			<button id="change-cat">Change cat</button>
 		</main>
 		<script src="./script.js"></script>
