--- a/Orientacao_a_objetos/conta_bancaria.html
+++ b/Orientacao_a_objetos/conta_bancaria.html
@@ -7,6 +7,6 @@
     <title>Teste OOJS</title>
 </head>
 <body>
-    <script src="./Orientacao_a_objetos/Conta_bancaria.js"></script>
+    <script src="./Conta_bancaria.js"></script>
 </body>
 </html>
