--- a/Manipulando_DOM/index.html
+++ b/Manipulando_DOM/index.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link rel="stylesheet" href="assets/css/styles.css" />
+		<link rel="stylesheet" href="style.css" />
 		<title>Dark mode and Light Mode</title>
 	</head>
 	<body>
@@ -14,6 +14,6 @@
 		</main>
 
 		<footer>Manipulando DOM</footer>
-		<script src="assets/js/scripts.js"></script>
+		<script src="script.js"></script>
 	</body>
 </html>
